packages/llvm/src/tests/control_flow/snapshots/llvm__tests__control_flow__if_block__    let x = 1;    const value = 2;        if (value === 1) {         x = 1;    } else {        x = 10    }       x = 30;    .snap
---
source: packages/llvm/src/tests/control_flow/if_block.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %x_ = alloca double, align 8
  store double 1.000000e+00, double* %x_, align 8
  %value_ = alloca double, align 8
  store double 2.000000e+00, double* %value_, align 8
  %"3" = load double, double* %value_, align 8
  %"2" = fcmp oeq double %"3", 1.000000e+00
  br i1 %"2", label %Block_0, label %Block_1

Block_0:                                          ; preds = %entry
  store double 1.000000e+00, double* %x_, align 8
  br label %Block_2

Block_1:                                          ; preds = %entry
  store double 1.000000e+01, double* %x_, align 8
  br label %Block_2

Block_2:                                          ; preds = %Block_1, %Block_0
  store double 3.000000e+01, double* %x_, align 8
  ret void
}

define void @__typescript__personality() {
entry:
  ret void
}

