packages/llvm/src/tests/control_flow/snapshots/llvm__tests__control_flow__if_block__if_else_if_else_block.snap
---
source: packages/llvm/src/tests/control_flow/if_block.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %"x|_|" = alloca double, align 8
  store double 1.000000e+00, double* %"x|_|", align 8
  %"value|_|" = alloca double, align 8
  store double 2.000000e+00, double* %"value|_|", align 8
  %"3" = load double, double* %"value|_|", align 8
  %"2" = fcmp oeq double %"3", 1.000000e+00
  br i1 %"2", label %Block_0, label %Block_1

Block_0:                                          ; preds = %entry
  store double 1.000000e+00, double* %"x|_|", align 8
  br label %Block_6

Block_1:                                          ; preds = %entry
  %"7" = load double, double* %"value|_|", align 8
  %"6" = fcmp oeq double %"7", 2.000000e+00
  br i1 %"6", label %Block_2, label %Block_3

Block_2:                                          ; preds = %Block_1
  store double 2.000000e+00, double* %"x|_|", align 8
  br label %Block_6

Block_3:                                          ; preds = %Block_1
  %"11" = load double, double* %"value|_|", align 8
  %"10" = fcmp oeq double %"11", 3.000000e+00
  br i1 %"10", label %Block_4, label %Block_5

Block_4:                                          ; preds = %Block_3
  store double 3.000000e+00, double* %"x|_|", align 8
  br label %Block_6

Block_5:                                          ; preds = %Block_3
  store double 1.000000e+01, double* %"x|_|", align 8
  br label %Block_6

Block_6:                                          ; preds = %Block_5, %Block_4, %Block_2, %Block_0
  store double 3.000000e+01, double* %"x|_|", align 8
  ret void
}

